# shape-of-thought

./: Cargo.toml  README.md  canmom-shape-of-thought.nfo
assets/: settings.toml  thought.sh.toml
assets/music/: ALPA - 0 - infos.txt
assets/shaders/: sphericalharmonics.wgsl
src/: main.rs
